<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cse_110.flashback_player.TabSongs">

    <ListView
        android:id="@+id/song_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="96dp"
        app:layout_constraintTop_toTopOf="parent">
    </ListView>


    <LinearLayout
        android:id="@+id/media_player"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:background="#5e5e5e"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="16dp"

        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"

                android:gravity="fill_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Song Title"
                    android:textColor="#f3f3f3"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/artist"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Artist"
                        android:textColor="#e3e3e3"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:text="●"
                        android:textColor="#e3e3e3" />

                    <TextView
                        android:id="@+id/album"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Album"
                        android:textColor="#e3e3e3"
                        android:textSize="15sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/previous"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_skip_previous_black_24dp"
                    android:backgroundTint="@color/colorAccent"/>

                <Button
                    android:id="@+id/play"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/colorAccent"
                    android:background="@drawable/ic_play_arrow_black_24dp" />

                <Button
                    android:id="@+id/reset"
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:backgroundTint="@color/colorAccent" />

                <Button
                    android:id="@+id/next"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_skip_next_black_24dp"
                    android:backgroundTint="@color/colorAccent"/>

            </LinearLayout>

        </RelativeLayout>


        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="3dp"
            android:text="@string/n_a"
            android:textColor="#ffdb58"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit ="marquee_forever"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scrollHorizontally="true" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>