<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="cse_110.flashback_player.VibeActivity">

    <android.support.design.widget.AppBarLayout
...
        <!--android:layout_height="35dp"-->
        <!--android:weightSum="1"-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_marginTop="110dp">-->

        <!--<Spinner-->
            <!--android:id="@+id/spinner"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_gravity="center"-->
            <!--android:dropDownWidth="fill_parent"-->
            <!--android:layout_weight="0.2"/>-->
        <!--<ImageButton-->
...
